Make bem-pr an npm module
- move nodes, levels and techs to project root
- code cleanup
- move getLevels() and getTechs() logic into TestNode class to simplify .bem/make.js

--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "phantomjs": "~1.9.1",
     "mocha-phantomjs": "~2.0.2"
   },
-  "devDependencies": {
+  "peerDependencies": {
     "bem": "~0.6.6"
   },
   "keywords": [
