--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
   "author": "Vladimir Varankin <varankinv@yandex-team.ru> (http://github.com/narqo)",
   "maintainers": [
     "Sergey Belov <peimei@ya.ru> (http://github.com/arikon)",
-    "Mikhail Berezin <karamadjong@yandex-team.ru> (http://github.com/mishaberezin)"
+    "Mikhail Berezin <karamadjong@yandex-team.ru> (http://github.com/mishaberezin)",
+    "Sergey Tatarintsev <sevinf@yandex-team.ru> (http://github.com/SevInf)"
+
   ],
   "license": "MIT"
 }
