--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
   "peerDependencies": {
     "bem": "~0.6.12"
   },
+  "devDependencies": {
+    "bem": "~0.6.12"
+  },
   "keywords": [
     "bem",
     "bem make",
