--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "q-io": "~1.10.4"
   },
   "peerDependencies": {
-    "bem": "~0.6.12"
+    "bem": "0.6.x || 0.7.x"
   },
   "devDependencies": {
     "bem": "~0.6.12"
