--- a/package.json
+++ b/package.json
@@ -11,13 +11,14 @@
     "mocha-phantomjs": "~2.0.2",
     "underscore": "~1.5.2",
     "q": "~0.9.7",
-    "q-io": "~1.10.4"
+    "q-io": "~1.10.4",
+    "jsdoc": "~3.3.0-alpha2"
   },
   "peerDependencies": {
     "bem": "0.6.x || 0.7.x"
   },
   "devDependencies": {
-    "bem": "~0.6.12"
+    "bem": "~0.7.1"
   },
   "keywords": [
     "bem",
