--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "bem": "~0.6.12"
   },
   "devDependencies": {
-    "bem": "~0.6.12"
+    "bem": "~0.6.12",
+    "marked": "~0.2.5",
+    "shmakowiki": "~0.4.0"
   },
   "keywords": [
     "bem",
