--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "phantomjs": "~1.9.1",
     "mocha-phantomjs": "~2.0.2",
     "marked": "~0.2.5",
-    "shmakowiki": "~0.4.0"
+    "shmakowiki": "~0.4.0",
+    "jsdoc": "~3.3.0",
+    "jsdoc-bem": "https://github.com/bem/bem-jsdoc3-plugin/archive/master.tar.gz"
   },
   "peerDependencies": {
     "bem": "~0.6.12"
