--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "marked": "~0.2.5",
     "shmakowiki": "~0.4.0",
     "jsdoc": "~3.3.0",
-    "jsdoc-bem": "https://github.com/bem/bem-jsdoc3-plugin/archive/master.tar.gz"
+    "jsdoc-bem": "~0.1.0",
+    "bem": "~0.6.12"
   },
   "peerDependencies": {
     "bem": "~0.6.12"
