--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
     "shmakowiki": "~0.4.0",
     "jsdoc": "~3.3.0",
     "jsdoc-bem": "~0.1.0",
+    "vow": "~0.3.12"
+  },
+  "devDependencies": {
     "bem": "~0.6.12"
   },
   "peerDependencies": {
