--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
     "q-io": "~1.10.4",
     "jsdoc": "~3.3.0",
     "jsdoc-bem": "~0.1.0",
+    "vow": "~0.3.12"
+  },
+  "devDependencies": {
     "bem": "~0.6.12"
   },
   "peerDependencies": {
