--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "jsdoc": "3.3.0-alpha5",
     "jsdoc-bem": "~0.2.0",
     "vow": "~0.3.12",
-    "bemhtml-compat": "~0.0.4",
+    "bemhtml-compat": "~0.1.2",
     "bem-xjst": "~0.3.1",
     "lodash": "~2.4.1",
     "q": "~0.9.7",
@@ -22,10 +22,10 @@
     "bem-environ": "~1.4.0"
   },
   "devDependencies": {
-    "bem": "^0.8.0"
+    "bem": "^0.9.0"
   },
   "peerDependencies": {
-    "bem": "^0.8.0"
+    "bem": ">= 0.8.0"
   },
   "keywords": [
     "bem",
